--- a/.travis.yml
+++ b/.travis.yml
@@ -30,4 +30,4 @@ before_install:
 
 script:
   - shellcheck --version
-  - shellcheck -s bash -e 1072 -x /scripts/src/* -x /scripts/lib/* /scripts/bin/multitor
+  - shellcheck -s bash -e 1072 -x src/* -x lib/* bin/multitor
