#1 - updated haproxy template - signed-off-by: trimstray <contact@nslab.at>

--- a/templates/haproxy-template.cfg
+++ b/templates/haproxy-template.cfg
@@ -17,9 +17,13 @@ frontend tor_proxies
 listen stats
   # URL: http://{ip|hostname}/stats
   bind              :16380
-	mode              http
-	stats             enable
-	stats             hide-version
-	stats             realm Haproxy\ Statistics
-	stats             uri /stats
-	stats             auth username:password
+  mode              http
+  stats             enable
+  stats             hide-version
+  stats             realm Haproxy\ Statistics
+  stats             uri /stats
+  stats             auth username:password
+
+backend bk_tor
+  log               global
+  balance           roundrobin
