#1 - updated haproxy template - signed-off-by: trimstray <contact@nslab.at>

--- a/templates/haproxy-template.cfg
+++ b/templates/haproxy-template.cfg
@@ -15,8 +15,8 @@ frontend tor_proxies
   default_backend   bk_tor
 
 listen stats
-  # URL: http://{ip|hostname}/stats
-  bind              :16380
+  # URL: http://127.0.0.1/stats
+  bind              127.0.0.1:16380
   mode              http
   stats             enable
   stats             hide-version
@@ -27,3 +27,4 @@ listen stats
 backend bk_tor
   log               global
   balance           roundrobin
+  # Add tor instances.
