#1 - updated haproxy template - signed-off-by: trimstray <contact@nslab.at>

--- a/templates/haproxy-template.cfg
+++ b/templates/haproxy-template.cfg
@@ -27,4 +27,5 @@ listen stats
 backend bk_tor
   log               global
   balance           roundrobin
-  # Add tor instances.
+
+  # Configuration of TOR processes.
