--- a/templates/haproxy-template.cfg
+++ b/templates/haproxy-template.cfg
@@ -28,4 +28,4 @@ backend bk_tor
   log               global
   balance           roundrobin
 
-  # Configuration of TOR processes.
+  # Configuration of TOR processes:
