#1 - updated haproxy template - signed-off-by: trimstray <contact@nslab.at>

--- a/templates/haproxy-template.cfg
+++ b/templates/haproxy-template.cfg
@@ -28,4 +28,4 @@ backend bk_tor
   log               global
   balance           roundrobin
 
-  # Configuration of TOR processes:
+# SOCKS/HTTP backends:
