--- a/templates/haproxy-template.cfg
+++ b/templates/haproxy-template.cfg
@@ -2,7 +2,7 @@ global
   daemon
   maxconn           500
 
-defaults tor
+defaults proxy
   mode              tcp
   timeout connect   4s
   timeout server    30s
@@ -10,9 +10,9 @@ defaults tor
 
 frontend tor_proxies
   # Less restrictive settings:
-  # - bind :16379 name tor
-  bind              127.0.0.1:16379 name tor
-  default_backend   bk_tor
+  # - bind :16379 name proxy
+  bind              127.0.0.1:16379 name proxy
+  default_backend   bk_node
 
 listen stats
   # URL: http://127.0.0.1/stats
@@ -24,7 +24,7 @@ listen stats
   stats             uri /stats
   stats             auth username:password
 
-backend bk_tor
+backend bk_node
   log               global
   balance           roundrobin
 
