autogen password for the haproxy /stats panel, minor fixes - signed-off-by: trimstray <contact@nslab.at>

--- a/templates/haproxy-template.cfg
+++ b/templates/haproxy-template.cfg
@@ -15,14 +15,14 @@ frontend tor_proxies
   default_backend   bk_node
 
 listen stats
-  # URL: http://127.0.0.1/stats
+  # URL: http://127.0.0.1:16380/stats
   bind              127.0.0.1:16380
   mode              http
   stats             enable
   stats             hide-version
   stats             realm Haproxy\ Statistics
   stats             uri /stats
-  stats             auth username:password
+  stats             auth ha_admin:__PASSWORD__
 
 backend bk_node
   log               global
