haproxy config: minor updates and fixes - signed-off-by: trimstray <trimstray@gmail.com>

--- a/templates/haproxy-template.cfg
+++ b/templates/haproxy-template.cfg
@@ -4,9 +4,10 @@ global
 
 defaults proxy
   mode              tcp
-  timeout connect   4s
-  timeout server    30s
-  timeout client    30s
+  timeout connect   200ms
+  timeout client    2000ms
+  timeout server    750ms
+  retries           0
 
 frontend tor_proxies
   # Less restrictive settings:
@@ -22,10 +23,10 @@ listen stats
   stats             hide-version
   stats             realm Haproxy\ Statistics
   stats             uri /stats
-  stats             auth ha_admin:__PASSWORD__
+  stats           auth ha_admin:__PASSWORD__
 
 backend bk_node
   log               global
-  balance           roundrobin
+  balance           leastconn
 
 # SOCKS/HTTP backends:
