updated haproxy template - signed-off-by: trimstray <trimstray@gmail.com>

--- a/templates/haproxy-template.cfg
+++ b/templates/haproxy-template.cfg
@@ -27,6 +27,7 @@ listen stats
 
 backend bk_node
   log               global
+  # Other: leastconn
   balance           roundrobin
 
 # SOCKS/HTTP backends:
