disabled HAProxy auth - signed-off-by: trimstray <trimstray@gmail.com>

--- a/templates/haproxy-template.cfg
+++ b/templates/haproxy-template.cfg
@@ -23,7 +23,7 @@ listen stats
   stats             hide-version
   stats             realm Haproxy\ Statistics
   stats             uri /stats
-  stats             auth ha_admin:__PASSWORD__
+  # stats             auth ha_admin:__PASSWORD__
 
 backend bk_node
   log               global
